--- a/modif/pack092025/frmUtama.form
+++ b/modif/pack092025/frmUtama.form
@@ -488,7 +488,7 @@
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="1">
-            <StringItem index="0" value="09/08/2025"/>
+            <StringItem index="0" value="24/08/2025"/>
           </StringArray>
         </Property>
         <Property name="displayFormat" type="java.lang.String" value="dd/MM/yyyy"/>
@@ -7829,7 +7829,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/48x48/6008661_bacteria_coronavirus_covid_laboratory_microscope_icon.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Periksa Lab PA - 2"/>
+        <Property name="text" type="java.lang.String" value="Periksa Lab MDT dan Sputum"/>
         <Property name="iconTextGap" type="int" value="0"/>
         <Property name="name" type="java.lang.String" value="btnLaboratoriumPA2" noResource="true"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -9917,7 +9917,8 @@
             <Property name="icon" type="javax.swing.Icon" noResource="true" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/picture/file-edit-16x16.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" Didesain &amp; dibuat oleh Khanza.Soft Media - Mod Ver 20250809"/>
+            <Property name="text" type="java.lang.String" value=" Didesain &amp; dibuat oleh Khanza.Soft Media - Mod Ver 20250825"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
             <Property name="iconTextGap" type="int" value="3"/>
             <Property name="name" type="java.lang.String" value="jLabel7" noResource="true"/>
